[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Gear.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[node name="Loot" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = -1

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 40.0

[connection signal="body_entered" from="." to="." method="_on_Gear_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
